@@ -1,6 +1,7 @@
 0.75.0 (??)
   * Bug fixed in Exception text when field names was not matching the database
-  * Core does not support dates before 1970-01-01: check and document
+  * The Date type does not support millisec resolution, and dates before 1900-12-13 
+    and dates after 2038-01-19 are not supported on 32 bit systems
   
 0.74.0 (19 Nov 2014)
   * Added support for more field/accessors naming conventions
